--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style/style.css" />
-    <title>Document</title>
+    <title>Simple Project</title>
   </head>
   <body>
     <header class="header">
@@ -49,15 +46,11 @@
             <div class="about__content">
               <div class="title">About your product</div>
               <p class="about__text">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Suscipit rem eos fugit, magni inventore, fuga quod quam
-                recusandae aliquam illum tempore, neque obcaecati dolor pariatur
-                ex! Nesciunt consequuntur dolore aspernatur.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit rem eos fugit, magni inventore, fuga quod quam recusandae aliquam illum tempore, neque obcaecati dolor pariatur ex!
+                Nesciunt consequuntur dolore aspernatur.
               </p>
               <p class="about__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Consequuntur nesciunt rerum repellendus illo, aspernatur ab
-                dolor fugit earum atque molestias obcaecati ipsum velit
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nesciunt rerum repellendus illo, aspernatur ab dolor fugit earum atque molestias obcaecati ipsum velit
                 necessitatibus error voluptatem, natus placeat ipsam harum!
               </p>
             </div>
@@ -81,10 +74,8 @@
                 </div>
                 <div class="pulse__text">
                   <p>
-                    Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                    amet atque, impedit iure placeat, ullam. Reprehenderit
-                    aliquam, nemo cum velit ratione perferendis quas, maxime,
-                    quaerat porro totam, dolore minus inventore.
+                    Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat
+                    porro totam, dolore minus inventore.
                   </p>
                 </div>
               </div>
@@ -94,10 +85,8 @@
                 </div>
                 <div class="pulse__text">
                   <p>
-                    Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                    amet atque, impedit iure placeat, ullam. Reprehenderit
-                    aliquam, nemo cum velit ratione perferendis quas, maxime,
-                    quaerat porro totam, dolore minus inventore.
+                    Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat
+                    porro totam, dolore minus inventore.
                   </p>
                 </div>
               </div>
@@ -107,10 +96,8 @@
                 </div>
                 <div class="pulse__text">
                   <p>
-                    Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                    amet atque, impedit iure placeat, ullam. Reprehenderit
-                    aliquam, nemo cum velit ratione perferendis quas, maxime,
-                    quaerat porro totam, dolore minus inventore.
+                    Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat
+                    porro totam, dolore minus inventore.
                   </p>
                 </div>
               </div>
@@ -120,10 +107,8 @@
                 </div>
                 <div class="pulse__text">
                   <p>
-                    Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                    amet atque, impedit iure placeat, ullam. Reprehenderit
-                    aliquam, nemo cum velit ratione perferendis quas, maxime,
-                    quaerat porro totam, dolore minus inventore.
+                    Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat
+                    porro totam, dolore minus inventore.
                   </p>
                 </div>
               </div>
@@ -133,10 +118,8 @@
                 </div>
                 <div class="pulse__text">
                   <p>
-                    Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                    amet atque, impedit iure placeat, ullam. Reprehenderit
-                    aliquam, nemo cum velit ratione perferendis quas, maxime,
-                    quaerat porro totam, dolore minus inventore.
+                    Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat
+                    porro totam, dolore minus inventore.
                   </p>
                 </div>
               </div>
@@ -146,10 +129,8 @@
                 </div>
                 <div class="pulse__text">
                   <p>
-                    Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                    amet atque, impedit iure placeat, ullam. Reprehenderit
-                    aliquam, nemo cum velit ratione perferendis quas, maxime,
-                    quaerat porro totam, dolore minus inventore.
+                    Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat
+                    porro totam, dolore minus inventore.
                   </p>
                 </div>
               </div>
@@ -174,10 +155,8 @@
                     The description for the image
                   </div>
                   <p class="scren__text">
-                    Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque
-                    itaque, ipsa vel exercitationem ullam quos aut nostrum
-                    cupiditate fuga quaerat quam animi dolores. Sequi itaque,
-                    unde perferendis nemo debitis dolor.
+                    Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde
+                    perferendis nemo debitis dolor.
                   </p>
                 </div>
               </div>
@@ -190,10 +169,8 @@
                     The description for the image
                   </div>
                   <p class="scren__text">
-                    Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque
-                    itaque, ipsa vel exercitationem ullam quos aut nostrum
-                    cupiditate fuga quaerat quam animi dolores. Sequi itaque,
-                    unde perferendis nemo debitis dolor.
+                    Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde
+                    perferendis nemo debitis dolor.
                   </p>
                 </div>
               </div>
@@ -206,10 +183,8 @@
                     The description for the image
                   </div>
                   <p class="scren__text">
-                    Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque
-                    itaque, ipsa vel exercitationem ullam quos aut nostrum
-                    cupiditate fuga quaerat quam animi dolores. Sequi itaque,
-                    unde perferendis nemo debitis dolor.
+                    Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde
+                    perferendis nemo debitis dolor.
                   </p>
                 </div>
               </div>
@@ -222,10 +197,8 @@
                     The description for the image
                   </div>
                   <p class="scren__text">
-                    Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque
-                    itaque, ipsa vel exercitationem ullam quos aut nostrum
-                    cupiditate fuga quaerat quam animi dolores. Sequi itaque,
-                    unde perferendis nemo debitis dolor.
+                    Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde
+                    perferendis nemo debitis dolor.
                   </p>
                 </div>
               </div>
@@ -249,9 +222,7 @@
                 <div class="revies__item__content">
                   <div class="revies__tringle"></div>
                   <p class="revies__text">
-                    Porro officia cumque sint deleniti nemo facere rem vitae
-                    odit inventore cum odio, iste quia doloribus autem aperiam
-                    nulla ea neque reprehenderit. Libero doloribus, possimus
+                    Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus
                     officiis sapiente necessitatibus commodi consectetur?
                   </p>
                   <p class="revies__autor">Lourens S.</p>
@@ -265,9 +236,7 @@
                 <div class="revies__item__content">
                   <div class="revies__tringle"></div>
                   <p class="revies__text">
-                    Porro officia cumque sint deleniti nemo facere rem vitae
-                    odit inventore cum odio, iste quia doloribus autem aperiam
-                    nulla ea neque reprehenderit. Libero doloribus, possimus
+                    Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus
                     officiis sapiente necessitatibus commodi consectetur?
                   </p>
                   <p class="revies__autor">Lourens S.</p>
@@ -281,9 +250,7 @@
                 <div class="revies__item__content">
                   <div class="revies__tringle"></div>
                   <p class="revies__text">
-                    Porro officia cumque sint deleniti nemo facere rem vitae
-                    odit inventore cum odio, iste quia doloribus autem aperiam
-                    nulla ea neque reprehenderit. Libero doloribus, possimus
+                    Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus
                     officiis sapiente necessitatibus commodi consectetur?
                   </p>
                   <p class="revies__autor">Lourens S.</p>
@@ -297,9 +264,7 @@
                 <div class="revies__item__content">
                   <div class="revies__tringle"></div>
                   <p class="revies__text">
-                    Porro officia cumque sint deleniti nemo facere rem vitae
-                    odit inventore cum odio, iste quia doloribus autem aperiam
-                    nulla ea neque reprehenderit. Libero doloribus, possimus
+                    Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus
                     officiis sapiente necessitatibus commodi consectetur?
                   </p>
                   <p class="revies__autor">Lourens S.</p>
@@ -396,11 +361,7 @@
               <div class="contacts__inputs">
                 <input placeholder="Your Name:" class="input" type="text" />
                 <input placeholder="Your Email:" class="input" type="email" />
-                <textarea
-                  placeholder="Your message:"
-                  name="textarea"
-                  id="textarea"
-                ></textarea>
+                <textarea placeholder="Your message:" name="textarea" id="textarea"></textarea>
                 <div><a class="btn btn--send" href="">SEND</a></div>
               </div>
               <div class="contact__info">
